# medMNIST_classification

./: README.md  pyproject.toml
artifacts/pathmnist_convnext_atto/: history.json  test_metrics.json
configs/: config.yaml
scripts/: train.py
src/config/: load_configs.py
src/data/: load_data.py
src/evaluation/: metrics.py  plots.py
src/inference/: predictor.py
src/model/: model_factory.py
src/serving/: api.py
src/training/: trainer.py
src/utils/: set_seed.py
